src/objects/Book__c.object
<CustomObject>
    <description>This object holds all the information related to a book</description>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Book_Name__c</fullName>
        <label>Book Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_arrival__c</fullName>
        <description>Date on which Library got it – Mandatory – Can’t be greater than today.</description>
        <label>Date of arrival</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Price_of_the_book__c</fullName>
        <label>Price of the book</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Magazines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Periodicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WhitePapers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Book_Name__c</columns>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_View_1</fullName>
        <columns>NAME</columns>
        <columns>Book_Name__c</columns>
        <columns>Author__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom_View_1</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>BOOK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Valid_Date_Of_Arrival</fullName>
        <active>true</active>
        <description>Date on which Library got it – Mandatory – Can’t be greater than today.</description>
        <errorConditionFormula>Date_of_arrival__c  &gt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_of_arrival__c</errorDisplayField>
        <errorMessage>Date of Arrival can not be greater than today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Valid_book_Price</fullName>
        <active>true</active>
        <description>In Dollar terms (Mandatory) and make sure that it is greater than Zero</description>
        <errorConditionFormula>(Price_of_the_book__c  &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Price_of_the_book__c</errorDisplayField>
        <errorMessage>Price cannot be less than Zero</errorMessage>
    </validationRules>
</CustomObject>